src/styles/pages/_about.scss
.about {
  .me {
    display: block;
    width: 11rem;
    margin: 0 auto;
    border-radius: 50%;
    border: 4px solid $blue;

    @include respond-to(medium) {
      float: right;
      margin: 0 0 2rem 2rem;
    }
  }
  
  h1, h2 {
    text-align: center;
    
    @include respond-to(medium) {
      text-align: left;
    }
  }

  .❤ {
    display: flex;
    flex-wrap: wrap;
    margin: 0;
    padding: 0;

    li {
      flex: 0 0 100%;
      display: flex;
      flex-direction: column;
      min-height: 130px;
      margin: 1rem 0;
      list-style: none;
      text-align: center;

      @include respond-to(small) {
        flex: 0 0 calc(100% / 2 - 1rem);
        margin: .5rem;
      }

      @include respond-to(medium) {
        flex: 0 0 calc(100% / 3 - 2rem);
        margin: 1rem;
      }

      @include respond-to(large) {
        flex: 0 0 calc(100% / 4 - 2rem);
      }

      .text {
        position: relative;
        display: flex;
        justify-content: center;
        flex-direction: column;
        height: calc(100% - 40px);
        padding: 20px;
        border: 2px solid $green;
        word-break: break-word;
        hyphens: auto;
        
        &::before {
          content: '';
          position: absolute;
          top: -2px;
          left: 50%;
          transform: translateX(-50%);
          height: 2px;
          width: calc(100% - 40px);
          background-color: #fff;
        }
      }
    }

    .icon {
      position: relative;
      z-index: 10;
      width: 40px;
      height: 40px;
      line-height: 40px;
      margin: 0 auto -10px;
      font-size: 2.5rem;
      font-weight: bold;
      fill: $blue;
      color: $blue;
    }

    .html {
      width: auto;
    }

    .animation {
      border: .2em solid $blue;
      border-bottom-color: transparent;
      border-radius: 50%;
      animation: 1.5s loader linear infinite;
      position: relative;
    }

    @keyframes loader {
      0% {
        transform: rotate(0deg);
      }
      100% {
        transform: rotate(360deg);
      }
    }

    .svg, .jam, .kiss {
      width: auto;
      font-size: 1.5rem;
    }
  }
}

